--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.achacker</groupId>
-    <artifactId>java_web_01</artifactId>
+    <artifactId>java_web</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>servlet-01</module>
-        <module>servlet-01</module>
+        <module>servlet-02</module>
     </modules>
 
     <properties>
