--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <modules>
         <module>servlet-01</module>
         <module>servlet-02</module>
+        <module>response</module>
+        <module>session-cookie</module>
     </modules>
 
     <properties>
