--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
             <version>2.3.3</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.21</version>
+        </dependency>
+
     </dependencies>
 
 </project>
