--- a/Spring/pom.xml
+++ b/Spring/pom.xml
@@ -6,7 +6,18 @@
 
     <groupId>org.example</groupId>
     <artifactId>Spring</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>spring-01</module>
+    </modules>
 
-    
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.2.10.RELEASE</version>
+        </dependency>
+    </dependencies>
+
 </project>
